--- a/react_weatherapp/package.json
+++ b/react_weatherapp/package.json
@@ -2,6 +2,7 @@
   "name": "react_weatherapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://ryzlan.github.io/react_weatherapp",
   "dependencies": {
     "cities.json": "^1.1.5",
     "moment": "^2.24.0",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
